# Oanda_Bot

./: .gitignore  AGENTS.md  DOWNLOAD_FIX_SUMMARY.md  Makefile  README.md  SKILLS.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  setup.cfg  test.py
agents/: README.md
backtesting/: README.md  __init__.py
config/: README.md  backtesting.yaml  download_config.toml  grafana_dashboard.json  monitoring.yaml  oanda.yaml  pragmatic_gates_by_symbol.yaml  pragmatic_gates_by_symbol_retune.yaml  prometheus.yml  regime_strategy_research.eur_usdjpy_retune.yaml  regime_strategy_research.local.yaml  regime_strategy_research.snippet.yaml  regime_strategy_research.xau_all_sessions.yaml  regime_strategy_research.xau_all_sessions_hybrid.explore.yaml  regime_strategy_research.xau_all_sessions_hybrid.yaml  regime_strategy_research.xau_balanced.events.m15.yaml  regime_strategy_research.xau_hardened.events.m15.yaml  regime_strategy_research.xau_hardened.events.yaml  regime_strategy_research.xau_hardened.yaml  regime_strategy_research.xau_rolling_relaxed.events.m15.yaml  regime_strategy_research.xau_rolling_relaxed.yaml  risk_limits.yaml  shadow_watch.live.models.json  strategies.yaml  system.yaml  xau_multi_session_pipeline.default.json  xau_multi_session_pipeline.smoke.json
docs/: ARCHITECTURE.md  DEPLOYMENT.md  DEPLOYMENT_TODO.md  FEATURE_CATALOG.md  GPU_RUNTIME_REFACTOR_TODO.md  MIGRATION_STATUS.md  MTF_BASELINE.md  MTF_MODEL_ARCHITECTURE.md  OPERATIONS.md  PROFESSIONALIZATION_PLAN.md  PROFITABILITY_PLAYBOOK.md  REPO_STRUCTURE.md  STRATEGY_EVIDENCE.md  STRATEGY_FOCUS_PLAN.md  STRATEGY_SCORECARD_TEMPLATE.md  SYSTEMD_VPS_RUNBOOK.md  TROUBLESHOOTING.md  WORKING_STRATEGIES.md  XAU_BREAKOUT_STRATEGY.md  overview.html
models/: README.md
notebooks/: data_inspect_and_convert.ipynb
(+424 files in other folders)
