[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oanda-bot"
version = "0.0.0"
description = "OANDA trading and backtesting system"
authors = [ { name="Your Name", email="you@example.com" } ]

[project.scripts]
oanda-download = "oanda_bot.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
