[metadata]
name = oanda-trading-system
version = 0.0.0
description = Skeleton OANDA backtesting system

[options]
packages = find:
include_package_data = True
; Note: install requirements separately before editable install.
; Running `pip install -r requirements.txt` is recommended prior to
; `pip install -e .` to avoid build-time parsing errors.

[options.entry_points]
console_scripts =
    oanda-download = scripts.download_data:main
