[metadata]
name = oanda-bot
version = 0.0.0
description = OANDA trading and backtesting system

[options]
package_dir =
    = src
packages = find:
include_package_data = True
; Note: install requirements separately before editable install.
; Running `pip install -r requirements.txt` is recommended prior to
; `pip install -e .` to avoid build-time parsing errors.

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    oanda-download = oanda_bot.cli:main
